<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_bg"
    android:id="@+id/main_layout"
    >
    <TextView
        android:id="@+id/Namelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/Namefield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:padding="20dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="textCapWords"
        android:layout_below="@+id/Namelabel"/>
    <TextView
        android:id="@+id/Firstnamelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_firstname"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Namefield"
        />

    <EditText
        android:id="@+id/FirstnameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstname"
        android:inputType="textCapWords"
        android:padding="20dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/Firstnamelabel"/>
    <TextView
        android:id="@+id/Agelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_age"
        android:layout_below="@+id/FirstnameField"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/AgeField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:padding="20dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/Agelabel"/>
    <TextView
        android:id="@+id/Skillslabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_skills"
        android:layout_below="@+id/AgeField"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/SkillsField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_skills"
        android:inputType="textCapWords"
        android:padding="20dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/Skillslabel"/>
    <TextView
        android:id="@+id/Phonelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_phone"
        android:layout_below="@+id/SkillsField"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/phoneField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:padding="20dp"
        android:layout_below="@+id/Phonelabel"
        android:background="@drawable/custom_edit_text"
        />

    <Button
        android:id="@+id/valid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valid_button"
        android:layout_marginTop="33dp"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:layout_below="@+id/phoneField"
        android:background="@drawable/custom_submit_button"/>

</RelativeLayout>