<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_bg"
    android:id="@+id/second_layout">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selection_title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/name_text"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_text"
        android:layout_marginTop="25dp"
        android:text="@string/firstname_text"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="25dp"
        android:text="@string/age"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginTop="25dp"
        android:text="@string/skills"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skills"
        android:layout_marginTop="25dp"
        android:text="@string/phone"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/phone"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/no_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:background="@drawable/custom_submit_button"
            android:hint="@string/negative_button"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/go_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@id/no_call"
            android:background="@drawable/custom_submit_button"
            android:hint="@string/go_call_button"
            android:layout_gravity="center"
            />
    </LinearLayout>

</RelativeLayout>